@@ -191,7 +191,7 @@ public final class CreateAdministrator {
 
                 if (language != null) {
                     language = language.trim();
-                    language = I18nUtil.getSupportedLocale(new Locale(language)).getLanguage();
+                    language = I18nUtil.getSupportedLocale(Locale.of(language)).getLanguage();
                 }
             }
 
